--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=yes"
+    />
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <script src="functions.js"></script>
     <title>The Pellaton Experience</title>
   </head>
   <body></body>
