layout infoboxes around video

--- a/index.html
+++ b/index.html
@@ -13,5 +13,26 @@
     <script src="functions.js"></script>
     <title>The Pellaton Experience</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <div class="item">Info</div>
+      <div class="item">text</div>
+      <div class="item">Reference</div>
+      <div class="item">GLAMhack2021</div>
+      <div class="item">Video on the right</div>
+      <div class="vis">
+        <video width:"40%" controls>
+          <source src="https://player.vimeo.com/video/511028088?autoplay=1" />
+        </video>
+      </div>
+      <div class="item">Video on the left</div>
+      <div class="item">tell me more</div>
+      <div class="item">some text</div>
+      <div class="item">did you know...?</div>
+      <div class="item">there's a video above me</div>
+      <div class="item">still above me</div>
+      <div class="item">bottom right</div>
+    </div>
+    <footer></footer>
+  </body>
 </html>
