--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
     <title>The Pellaton Experience</title>
   </head>
   <body>
+    <div id="nav">Hello, World!</div>
     <div class="main">
-      <div class="item">Info</div>
+      <div class="item">People</div>
       <div class="item">text</div>
       <div class="item">Reference</div>
       <div class="item">GLAMhack2021</div>
       <div class="item">Video on the right</div>
       <div class="vis">
-        <video width:"40%" controls>
-          <source src="https://player.vimeo.com/video/511028088?autoplay=1" />
-        </video>
+        <iframe
+          src="https://player.vimeo.com/video/511028088?title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+          width="2 fr"
+          height="auto"
+          frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen
+          title="20190527_UP_Lausanne_3-24"
+        ></iframe>
       </div>
       <div class="item">Video on the left</div>
       <div class="item">tell me more</div>
