--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>The Pellaton Experience</title>
   </head>
   <body>
-    <div id="nav">Hello, World!</div>
+    <div id="nav">The Pellaton Experience</div>
     <div class="main">
       <div class="item">People</div>
       <div class="item">text</div>
@@ -24,8 +24,8 @@
       <div class="vis">
         <iframe
           src="https://player.vimeo.com/video/511028088?title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-          width="2 fr"
-          height="auto"
+          width="1920"
+          height="350"
           frameborder="0"
           allow="autoplay; fullscreen; picture-in-picture"
           allowfullscreen
