--- a/index.html
+++ b/index.html
@@ -16,11 +16,24 @@
   <body>
     <div id="nav">The Pellaton Experience</div>
     <div class="main">
-      <div class="item">People</div>
+      <div class="item">Mentions</div>
       <div class="item">text</div>
       <div class="item">Reference</div>
-      <div class="item">GLAMhack2021</div>
-      <div class="item">Video on the right</div>
+      <div class="item">Additional information</div>
+      <div class="item">
+        <ul>
+          <li>Persons</li>
+            <ul>
+              <li>Sigurd Leeder (01:50, 04:20)</li>
+              <li>...</li>
+            </ul>
+          <li>Organisations</li>
+          <li>Places</li>
+            <ul>
+              <li>Lausanne</li>
+            </ul>
+        </ul>
+      </div>
       <div class="vis">
         <iframe
           src="https://player.vimeo.com/video/511028088?title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
@@ -32,7 +45,12 @@
           title="20190527_UP_Lausanne_3-24"
         ></iframe>
       </div>
-      <div class="item">Video on the left</div>
+       <div class="item">
+        <strong>Sigurd Leeder</strong><br/>
+        <ul>
+          <li>https://www.wikidata.org/wiki/Q547547</li>
+        </ul>
+      </div>
       <div class="item">tell me more</div>
       <div class="item">some text</div>
       <div class="item">did you know...?</div>
