mentions by chronology

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="item">Reference</div>
       <div class="item">Additional information</div>
       <div class="NER">
+        <strong>All mentions</strong>
         <ul>
           <li>Persons</li>
           <ul>
@@ -33,6 +34,14 @@
             <li>Lausanne</li>
           </ul>
         </ul>
+        <strong>Mentions' chronology</strong>
+        <ul>
+          <li>...</li>
+          <li>[01:50] Sigurd Leeder (person)</li>
+          <li>[01:54] Grete Müller (person)</li>
+          <li>...</li>
+        </ul>
+
       </div>
       <div class="vis">
         <iframe
