--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <div id="nav">The Pellaton Experience</div>
     <div class="main">
       <div class="tab">
-         <button class="tablinks" onclick="openTab(event, 'all')">All mentions</button>
+         <button class="tablinks active" onclick="openTab(event, 'all')">All mentions</button>
          <button class="tablinks" onclick="openTab(event, 'chronology')">Mentions' chronology</button>
       </div>
 
-      <div class="item">text</div>
-      <div class="item">Reference</div>
-      <div class="item">Additional information & material</div>
+      <div class="item heading">Videointerview mit Ursula Pellaton</div>
+      <div class="item heading">Lausanne, 2019/05/27</div>
+      <div class="item heading">Additional information & material</div>
       <div class="NER">
-        <div class="tabcontent" id="all">
+        <div class="tabcontent" id="all" style="display: block;">
       
           <strong>All mentions</strong>
         <ul>
@@ -77,13 +77,16 @@
       <div class="wiki">
         <strong>Sigurd Leeder</strong><br />
         <ul>
+          <!-- Wikidata link -->
           <li><a href="https://www.wikidata.org/wiki/Q547547" target="_blank">Wikidata</a></li>
+          <!-- SAPA link -->
           <li><a href="http://data.performing-arts.ch/a/49187985-04f9-4280-be72-dc316d9c1e01" target="_blank">SAPA</a></li>
         </ul>
       </div>
       <div class="item">did you know...?</div>
       <div class="item">there's a video above me</div>
       <div class="item">still above me</div>
+      <!-- if not null, image -->
       <div class="item"><img src="https://media.performing-arts.ch/iiif/image/1027-9-4-6-6/full/!200,200/0/color.jpg"/></div>
     </div>
     <footer></footer>
