--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           allowfullscreen
           title="20190527_UP_Lausanne_3-24"
         ></iframe>
+       
       </div>
       <div class="wiki">
         <strong>Sigurd Leeder</strong><br />
@@ -84,8 +85,8 @@
         </ul>
       </div>
       <div class="item">did you know...?</div>
-      <div class="item">there's a video above me</div>
-      <div class="item">still above me</div>
+      <div class="middle">there's a video above me</div>
+    
       <!-- if not null, image -->
       <div class="item"><img src="https://media.performing-arts.ch/iiif/image/1027-9-4-6-6/full/!200,200/0/color.jpg"/></div>
     </div>
