--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script src="functions.js"></script>
     <script src="data.js"></script>
     <title>The Pellaton Experience</title>
@@ -85,7 +86,7 @@
         ></iframe>
        
       </div>
-      <div class="wiki">
+      <div class="wiki" id="entities_info">
         <strong>Sigurd Leeder</strong><br />
         <ul>
           <!-- Wikidata link -->
