work in progress player control

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://player.vimeo.com/api/player.js"></script>
-    <script src="functions.js"></script>
-    <script src="data.js"></script>
     <title>The Pellaton Experience</title>
   </head>
   <body>
@@ -75,16 +73,9 @@
       </div>
     </div>
       <div class="vis">
-        <iframe
-          src="https://player.vimeo.com/video/511028088?title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
-          width="1920"
-          height="350"
-          frameborder="0"
-          allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen
-          title="20190527_UP_Lausanne_3-24"
-        ></iframe>
-       
+        <iframe src="https://player.vimeo.com/video/511028088" width="1920" height="360" frameborder="0" allowfullscreen allow="autoplay; encrypted-media"></iframe>
+        <script src="functions.js"></script>
+        <script src="data.js"></script>
       </div>
       <div class="wiki" id="entities_info">
         <strong>Sigurd Leeder</strong><br />
