--- a/index.html
+++ b/index.html
@@ -56,14 +56,8 @@
         <script src="functions.js"></script>
         <script src="data.js"></script>
       </div>
-      <div class="wiki" id="entities_info">
-        <strong>Sigurd Leeder</strong><br />
-        <ul>
-          <!-- Wikidata link -->
-          <li><a href="https://www.wikidata.org/wiki/Q547547" target="_blank">Wikidata</a></li>
-          <!-- SAPA link -->
-          <li><a href="http://data.performing-arts.ch/a/49187985-04f9-4280-be72-dc316d9c1e01" target="_blank">SAPA</a></li>
-        </ul>
+      <div class="wiki" id="entities_info" style="max-height: 300px; overflow: scroll;">
+    
       </div>
       <div class="item">did you know...?</div>
       <div class="middle">
