content about page

--- a/about.html
+++ b/about.html
@@ -6,5 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Pellaton Experience</title>
   </head>
-  <body></body>
+  <body>
+    <div class="about">
+      <h1>About</h1>
+      <p>
+        Die Ausstellung Sigurd Leeder – Spuren des Tanzes, die zum Zeitpunkt des
+        Videointerviews am 27.05.2019 in den Räumlichkeiten von SAPA Lausanne zu
+        sehen war, bot den inhaltlichen und visuellen Kontext für die
+        Erinnerungen zu den Anfängen des Bühnentanzes in der Schweiz. Das
+        Interview gibt Einblick in zahlreiche Verbindungen, die zwischen
+        Protagonistinnen und Protagonisten des Ausdruckstanzes und Zürich
+        bestehen. Ursula Pellaton erzählt von Rudolf von Laban, Mary Wigman,
+        Sigurd Leeder, Trudi Schoop, Niddy Impekoven, Suzanne Perrottet, Max
+        Terpis. Zu deren Wirken und Kunstverständnis bietet sie zahlreiche
+        Anekdoten und Geschichten bis hin zu den Spuren, die im heutigen
+        Tanzschaffen noch davon zu finden sind. The exhibition Sigurd Leeder –
+        Traces of Dance, which was on display at the SAPA Lausanne premises at
+        the time of the video interview on 27 May 2019, provided the content and
+        visual context for the recollections on the beginnings of stage dance in
+        Switzerland. The interview gives insight into numerous connections that
+        exist between protagonists of expressive dance and Zurich. Ursula
+        Pellaton talks about Rudolf von Laban, Mary Wigman, Sigurd Leeder, Trudi
+        Schoop, Niddy Impekoven, Suzanne Perrottet, Max Terpis. She offers
+        numerous anecdotes and stories about their work and understanding of
+        art, including the traces that can still be found in today's dance work.
+        Artikel «Utopie der Ganzheitlichkeit – Ausdruckstanz in der Schweiz» von
+        Ursula Pellaton, in: NZZ, 5./6. März 1994, Nr. 54
+      </p>
+    </div>
+  </body>
 </html>
