--- a/about.html
+++ b/about.html
@@ -34,5 +34,6 @@
         Ursula Pellaton, in: NZZ, 5./6. März 1994, Nr. 54
       </p>
     </div>
+    <button>Return to the Pellaton Experience</button>
   </body>
 </html>
