linked about page

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       </div>
       <div class="item heading">Videointerview mit Ursula Pellaton</div>
       <div class="item heading">Lausanne, 2019/05/27</div>
-      <div class="item heading">Additional information & material</div>
+      <div class="item heading"><a href="about.html">Additional information & material</a></div>
       <div class="NER">
         <div class="tabcontent" id="all" style="display: block;">
-          <form>
+          <form style="margin-bottom: 10px;"">
             <input type="search" class="form-control" id="entity-search" aria-describedby="search-help">
           </form>
-          <div id="entities" style="padding-top: 10px; max-height: 410px; overflow-y: scroll;"></div>
+          <div id="entities" style="max-height: 410px; overflow-y: scroll;"></div>
         </div>
         <div class="tabcontent" id="chronology"></div>
       </div>
@@ -33,8 +33,8 @@
         <iframe src="https://player.vimeo.com/video/511028088" width="1920" height="480" frameborder="0" allowfullscreen allow="autoplay; encrypted-media"></iframe>
         <script src="functions.js"></script>
       </div>
-      <div class="wiki" id="entities_info" style="max-height: 480px; overflow-y: scroll;"></div>
-      <div class="item">did you know...?</div>
+      <div class="wiki" id="entities_info" style="padding: 20px; max-height: 480px; overflow-y: scroll;"></div>
+      <div class="item"></div>
       <div class="middle">
         <div id="transcript" style="height: 200px; overflow-y: scroll;"></div>
       </div>
